web-infras/parser/tests/fixtures/babel/es2015/uncategorised/347/output.txt
[SyntaxError]: Setter must have exactly one formal parameter. (1,20)
1|class A { set prop(x, y) {} }
 |                  ^
